WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314342
REGRESSION(
312814@main
): Broke some builds (use of undeclared identifier 'JSC_JIT_CAGE')
https://bugs.webkit.org/show_bug.cgi?id=314342
Summary
REGRESSION(312814@main): Broke some builds (use of undeclared identifier 'JSC...
Karl Rackler
Reported
2026-05-07 13:50:17 PDT
312814@main
trimmed one too many includes, let's bring back JITOperationValidation.h. * Source/JavaScriptCore/runtime/JSCPtrTag.h: <
rdar://176490664
>
Attachments
Add attachment
proposed patch, testcase, etc.
EWS
Comment 1
2026-05-07 13:58:34 PDT
Committed
312827@main
(e05be0b507ed): <
https://commits.webkit.org/312827@main
> Reviewed commits have been landed. Closing PR #64493 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug