REGRESSION(312814@main): Broke some builds (use of undeclared identifier 'JSC_JIT_CAGE') https://bugs.webkit.org/show_bug.cgi?id=314342 rdar://176490664

Unreviewed build fix.

312814@main trimmed one too many includes, let's bring back
JITOperationValidation.h.

* Source/JavaScriptCore/runtime/JSCPtrTag.h:

Canonical link: https://commits.webkit.org/312827@main